lib/bait/tests/inout_error/struct/required_field.in.bt
struct Spam{
	x i32
	@required eggs i32
	y i32
}

s := Spam{}
s2 := Spam{
	eggs = 5
}
s3 := Spam{
	y = 3
}
